--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install pyinstaller mitmproxy
+          pip install pyinstaller mitmproxy requests
 
       - name: Build EXE
         run: |
